HIVE-26473: Hive JDK-17 support for compile and runtime (#5404)
Co-authored-by: kokila-19 <kokilanarayanan95@gmail.com>
Co-authored-by: Tanishq Chugh <tanishqchugh4142@gmail.com>